--- a/src/style.css
+++ b/src/style.css
@@ -15,11 +15,17 @@ body {
   @apply w-full h-full object-cover;
 }
 .btn {
-  @apply absolute w-10 h-10 z-[10px] cursor-pointer bg-white text-lg p-2.5 rounded-[50%] border-[none] active:scale-110 flex justify-center items-center;
+  @apply absolute w-10 h-10 z-10 cursor-pointer bg-white text-lg p-2.5 rounded-[50%] border-[none] active:scale-110 flex justify-center items-center;
 }
 .btn-prev {
   @apply left-[2%] top-[45%];
 }
 .btn-next {
   @apply right-[2%] top-[45%];
+}
+.dot-container {
+  @apply absolute z-10 bottom-0 flex justify-center w-full mb-2 gap-1;
+}
+.dot {
+  @apply bg-white border border-sky-800 rounded-full w-3 h-3;
 }
