refactor: render method
Slides and dots are generated via ts

--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@ body {
 .btn-next {
   @apply right-[2%] top-[45%];
 }
-.dot-container {
+.dots-container {
   @apply absolute z-10 bottom-0 flex justify-center w-full mb-2 gap-1;
 }
 .dot {
